--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "node.js course (Loftschool)",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "fs-extra": "^7.0.0"
+  },
   "devDependencies": {
     "eslint": "^5.3.0",
     "eslint-config-standard": "^11.0.0",
